# pycollection

./: LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini
Pycollection/Graphs/: DirectedGraph.py  Graph.py  UndirectedGraph.py
Pycollection/Graphs/Contracts/: IGraph.py
Pycollection/Lists/: ArrayList.py  LinkedList.py
Pycollection/Lists/Contracts/: IList.py  Iterateable.py  Searchable.py  Sortable.py
Pycollection/Trees/: BinarySearchTree.py
Pycollection/Trees/Contracts/: ITree.py
test/: TestCase.py
test/Graphs/: test_directedgraph.py  test_undirectedgraph.py
test/Lists/: test_arraylist.py  test_linkedlist.py
test/Trees/: test_binarysearchtree.py
